# llm-mood-prompts

./: .gitignore  README.md  pyproject.toml
skills/3am/: SKILL.md
skills/adderall/: SKILL.md
skills/all-in/: SKILL.md
skills/anxious/: SKILL.md
skills/beer/: SKILL.md
skills/beer-blog/: SKILL.md
skills/beer-confession/: SKILL.md
skills/beer-friday/: SKILL.md
skills/beer-terse/: SKILL.md
skills/break/: SKILL.md
skills/break-blog/: SKILL.md
skills/break-bored/: SKILL.md
skills/break-terse/: SKILL.md
skills/breakthrough/: SKILL.md
skills/burned-out/: SKILL.md
skills/championship/: SKILL.md
skills/clutch/: SKILL.md
skills/coffee/: SKILL.md
skills/coffee-blog/: SKILL.md
skills/coffee-book/: SKILL.md
skills/coffee-late-slack/: SKILL.md
skills/coffee-terse/: SKILL.md
skills/confident/: SKILL.md
skills/demo-day/: SKILL.md
skills/flow/: SKILL.md
skills/hangover/: SKILL.md
skills/hungry/: SKILL.md
skills/hungry-bail-soon/: SKILL.md
skills/hungry-blog/: SKILL.md
skills/hungry-terse/: SKILL.md
skills/just-compacted/: SKILL.md
skills/lmp-3am/: SKILL.md
skills/lmp-adderall/: SKILL.md
skills/lmp-all-in/: SKILL.md
skills/lmp-anxious/: SKILL.md
skills/lmp-beer/: SKILL.md
skills/lmp-beer-blog/: SKILL.md
skills/lmp-beer-confession/: SKILL.md
skills/lmp-beer-friday/: SKILL.md
skills/lmp-beer-terse/: SKILL.md
skills/lmp-break/: SKILL.md
skills/lmp-break-blog/: SKILL.md
skills/lmp-break-bored/: SKILL.md
skills/lmp-break-terse/: SKILL.md
skills/lmp-breakthrough/: SKILL.md
skills/lmp-burned-out/: SKILL.md
(+78 files in other folders)
