[project]
name = "llm-mood-prompts"
version = "0.1.0"
description = "Inject naturalistic human-state primers into Claude Code as skills, and observe what happens."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Seido AI Ltd" }]
dependencies = [
    "click>=8.1,<9.0",
    "rich>=13.0,<16.0",
]

[project.scripts]
llm-mood-prompts = "llm_mood_prompts.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_mood_prompts"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "llm_mood_prompts/skills"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
